main to qna 화면 전환

--- a/start/index.html
+++ b/start/index.html
@@ -15,9 +15,11 @@
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/qna.css">
+    <link rel="stylesheet" href="./css/animation.css">
   </head>
   <body>
     <div class="container">
+      <!-- main 페이지 -->
       <section id="main" class="mx-auto mt-5 py-5 px-3">
         <h1 class="pt-5">십이간지로 알아보는 연애 유형</h1>
         <div class="col-lg-6 col-md-8 col-sm-10 col- mx-auto">
@@ -27,11 +29,14 @@
           나만의 MBTI 사이트입니다! <br>
           아래 시작하기 버튼을 눌러주세요 :D
         </p>
-        <button type="button" class="btn btn-outline-danger mt-3">시작하기</button>
+        <button type="button" class="btn btn-outline-danger mt-3" onclick="js:begin()">시작하기</button>
       </section>
-      <section id="qna">
 
+      <!-- QnA 페이지 -->
+      <section id="qna">
+        <p>qna</p>
       </section>
+      <!-- result 페이지 -->
       <section id="result">
 
       </section>
