qna 페이지 - 질문, 답변

--- a/start/index.html
+++ b/start/index.html
@@ -34,12 +34,18 @@
 
       <!-- QnA 페이지 -->
       <section id="qna">
-        <p>qna</p>
+        <div class="qBox my-5 py-3 mx-auto">
+
+        </div>
+        <div class="answerBox">
+
+        </div>
       </section>
       <!-- result 페이지 -->
       <section id="result">
 
       </section>
+      <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script>
     </div>
   </body>
