--- a/start/index.html
+++ b/start/index.html
@@ -7,7 +7,7 @@
     <!-- 부트스탭 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <!-- 폰트 -->
+    <!-- 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/qna.css">
     <link rel="stylesheet" href="./css/animation.css">
+    <link rel="stylesheet" href="./css/result.css">
   </head>
   <body>
     <div class="container">
       <!-- main 페이지 -->
-      <section id="main" class="mx-auto mt-5 py-5 px-3">
+      <section id="main" class="mx-auto my-5 py-5 px-3">
         <h1 class="pt-5">십이간지로 알아보는 연애 유형</h1>
         <div class="col-lg-6 col-md-8 col-sm-10 col- mx-auto">
           <img src="./img/main.png" alt="mainImage" class="img-fluid py-3">
@@ -34,6 +35,11 @@
 
       <!-- QnA 페이지 -->
       <section id="qna">
+        <div class="status mx-auto mt-5">
+          <div class="statusBar">
+
+          </div>
+        </div>
         <div class="qBox my-5 py-3 mx-auto">
 
         </div>
@@ -43,7 +49,16 @@
       </section>
       <!-- result 페이지 -->
       <section id="result">
-
+        <h1 class="pt-5">당신의 결과는 ?</h1>
+        <div class="resultName">
+          
+        </div>
+        <div id="resultImg" class="col-lg-6 col-md-8 col-sm-10 col- mx-auto">
+          
+        </div>
+        <div class="resultDesc">
+        </div>
+        <button type="button" class="btn btn-outline-danger mt-3" onclick="js:begin()">공유하기</button>
       </section>
       <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script>
