--- a/index.html
+++ b/index.html
@@ -1,82 +1,86 @@
 <!DOCTYPE html>
 <html lang="ko" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="auther" content="Seyeon">
-    <meta name="keywords" content="십이간지 연애 유형">
-    <meta name="description" content="십이간지 연애 유형">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="auther" content="Seyeon">
+        <meta name="keywords" content="십이간지 연애 유형">
+        <meta name="description" content="십이간지 연애 유형">
 
-    <!-- sns share -->
-    <meta property="og:url" content="https://love-type-twelve.netlify.app"/>
-    <meta property="og:title" content="십이간지 연애 유형"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="img/share.png"/>
-    <meta property="og:description" content="십이간지로 알아보는 연애 유형"/>
+        <!-- sns share -->
+        <meta property="og:url" content="https://love-type-twelve.netlify.app"/>
+        <meta property="og:title" content="십이간지 연애 유형"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:image" content="img/share.png"/>
+        <meta property="og:description" content="십이간지로 알아보는 연애 유형"/>
 
-    <!-- favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="img/favicon.ico">
+        <!-- favicon -->
+        <link rel="shortcut icon" href="img/favicon.ico">
+        <link rel="apple-touch-icon-precomposed" href="img/favicon.ico">
 
-    <title>십이간지 연애 유형</title>
-    <!-- 부트스탭 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- 폰트 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
-    <!-- 스타일 시트 -->
-    <link rel="stylesheet" href="./css/default.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/qna.css">
-    <link rel="stylesheet" href="./css/animation.css">
-    <link rel="stylesheet" href="./css/result.css">
-  </head>
-  <body>
-    <div class="container">
-      <!-- main 페이지 -->
-      <section id="main" class="mx-auto my-5 py-5 px-3">
-        <h1 class="pt-5">십이간지로 알아보는 연애 유형</h1>
-        <div class="col-lg-6 col-md-8 col-sm-10 col- mx-auto">
-          <img src="./img/main.png" alt="mainImage" class="img-fluid py-3">
-        </div>
-        <p>
-          나의 연애유형 찾기 사이트입니다! <br>
-          아래 시작하기 버튼을 눌러주세요 :D
-        </p>
-        <button type="button" class="btn btn-outline-danger mt-3" onclick="js:begin()">시작하기</button>
-      </section>
+        <title>십이간지 연애 유형</title>
+        <!-- 부트스탭 -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous">
+        <!-- 폰트 -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link
+            rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin="crossorigin">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap"
+            rel="stylesheet">
+        <!-- 스타일 시트 -->
+        <link rel="stylesheet" href="./css/default.css">
+        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/qna.css">
+        <link rel="stylesheet" href="./css/animation.css">
+        <link rel="stylesheet" href="./css/result.css">
+        <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+        <script>
+            Kakao.init('059c42b27ce7f68d39cc2c38f24041b4');
+            Kakao.isInitialized();
+        </script>
+    </head>
+    <body>
+        <div class="container">
+            <!-- main 페이지 -->
+            <section id="main" class="mx-auto my-5 py-5 px-3">
+                <h1 class="pt-5">십이간지로 알아보는 연애 유형</h1>
+                <div class="col-lg-6 col-md-8 col-sm-10 col- mx-auto">
+                    <img src="./img/main.png" alt="mainImage" class="img-fluid py-3">
+                </div>
+                <p>
+                    나의 연애유형 찾기 사이트입니다!
+                    <br>
+                    아래 시작하기 버튼을 눌러주세요 :D
+                </p>
+                <button type="button" class="btn btn-outline-danger mt-3" onclick="js:begin()">시작하기</button>
+            </section>
 
-      <!-- QnA 페이지 -->
-      <section id="qna">
-        <div class="status mx-auto mt-5">
-          <div class="statusBar">
-
-          </div>
+            <!-- QnA 페이지 -->
+            <section id="qna">
+                <div class="status mx-auto mt-5">
+                    <div class="statusBar"></div>
+                </div>
+                <div class="qBox my-5 px-2 py-3 mx-auto"></div>
+                <div class="answerBox px-2"></div>
+            </section>
+            <!-- result 페이지 -->
+            <section id="result" class="mx-auto my-5 py-5 px-3">
+                <h1 class="pt-5 mb-5">당신의 결과는 ?</h1>
+                <div class="resultName mx-3"></div>
+                <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col- mx-auto"></div>
+                <div class="resultDesc mx-3 my-3"></div>
+                <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:begin()">공유하기</button>
+            </section>
+            <script src="./js/data.js" charset="utf-8"></script>
+            <script src="./js/start.js" charset="utf-8"></script>
+            <script src="./js/share.js" charset="utf-8"></script>
         </div>
-        <div class="qBox my-5 px-2 py-3 mx-auto">
-
-        </div>
-        <div class="answerBox px-2">
-
-        </div>
-      </section>
-      <!-- result 페이지 -->
-      <section id="result" class="mx-auto my-5 py-5 px-3">
-        <h1 class="pt-5 mb-5">당신의 결과는 ?</h1>
-        <div class="resultName mx-3">
-          
-        </div>
-        <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col- mx-auto">
-          
-        </div>
-        <div class="resultDesc mx-3 my-3">
-        </div>
-        <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:begin()">공유하기</button>
-      </section>
-      <script src="./js/data.js" charset="utf-8"></script>
-      <script src="./js/start.js" charset="utf-8"></script>
-    </div>
-  </body>
+    </body>
 </html>
