--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="resultName mx-3"></div>
                 <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col- mx-auto"></div>
                 <div class="resultDesc mx-3 my-3"></div>
-                <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:begin()">공유하기</button>
+                <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:setShare()">공유하기</button>
             </section>
             <script src="./js/data.js" charset="utf-8"></script>
             <script src="./js/start.js" charset="utf-8"></script>
